# residuality-cli

./: .gitignore  Cargo.toml  README.md
architecture/: components.csv  stressors.csv
src/: cli.rs  lib.rs  main.rs  model.rs  storage.rs
src/analysis/: matrix.rs
src/commands/: analyze.rs  check.rs  component.rs  init.rs  matrix.rs  mod.rs  stressor.rs
src/views/: check.rs  matrix.rs  mod.rs
