[package]
name = "residuality"
version = "0.1.0"
edition = "2024"
default-run = "residuality"

[[bin]]
name = "res"
path ="src/bin/res.rs"

[[bin]]
name = "residuality"
path ="src/main.rs"

[dependencies]
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
inquire = "0.9.4"
serde = { version = "1", features = ["derive"] }
